core/tests/typescript/snapshots/integration_tests__typescript__analyze_code_typescript.snap
---
source: core/tests/typescript/mod.rs
assertion_line: 18
expression: "serde_json::to_string_pretty(&result).unwrap()"
---
{
  "file_path": "test.ts",
  "original_file_path": "test.ts",
  "line_metrics": [
    {
      "line_number": 1,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 2,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.2,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    },
    {
      "line_number": 3,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    },
    {
      "line_number": 4,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.4,
      "depth": 2,
      "transitive_dependencies": 2,
      "dependent_lines": [
        2
      ]
    },
    {
      "line_number": 5,
      "total_dependencies": 0,
      "dependency_distance_cost": -0.0,
      "depth": 0,
      "transitive_dependencies": 0,
      "dependent_lines": []
    }
  ],
  "overall_complexity_score": 5.66
}
