core/tests/typescript/snapshots/integration_tests__typescript__arrow_function_parameter_dependency_ir.snap
---
source: core/tests/typescript/mod.rs
assertion_line: 71
expression: "serde_json::to_string_pretty(&ir).unwrap()"
---
{
  "file_path": "tests/typescript/fixtures/arrow_function_parameter_dependency.ts",
  "definitions": [
    {
      "name": "a",
      "line_number": 1,
      "definition_type": "VariableDefinition",
      "scope": null
    },
    {
      "name": "b",
      "line_number": 1,
      "definition_type": "VariableDefinition",
      "scope": null
    }
  ],
  "dependencies": [
    {
      "source_line": 2,
      "target_line": 1,
      "symbol": "b",
      "dependency_type": "VariableUse",
      "context": "variable_use"
    },
    {
      "source_line": 2,
      "target_line": 1,
      "symbol": "b",
      "dependency_type": "VariableUse",
      "context": "arguments"
    }
  ],
  "analysis_metadata": {
    "language": "TypeScript",
    "total_lines": 3,
    "analysis_timestamp": "now",
    "lintric_version": "0.1.0"
  }
}
