core/tests/typescript/snapshots/integration_tests__typescript__class_method_dependency_metrics.snap
---
source: core/tests/typescript/mod.rs
expression: "serde_json::to_string_pretty(&result).unwrap()"
---
{
  "file_path": "tests/typescript/fixtures/class_method_dependency.ts",
  "line_metrics": [
    {
      "line_number": 2,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.0,
      "depth": 1,
      "transitive_dependencies": 0,
      "dependent_lines": [
        2
      ]
    },
    {
      "line_number": 6,
      "total_dependencies": 2,
      "dependency_distance_cost": 0.3333333333333333,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        5,
        5
      ]
    }
  ],
  "overall_complexity_score": 5.233333333333333
}
