core/tests/typescript/snapshots/integration_tests__typescript__function_parameter_dependency_ir.snap
---
source: core/tests/typescript/mod.rs
expression: "serde_json::to_string_pretty(&ir).unwrap()"
---
{
  "file_path": "tests/typescript/fixtures/function_parameter_dependency.ts",
  "definitions": [
    {
      "name": "a",
      "line_number": 1,
      "definition_type": "FunctionDefinition",
      "scope": "a"
    },
    {
      "name": "b",
      "line_number": 1,
      "definition_type": "VariableDefinition",
      "scope": "a"
    }
  ],
  "dependencies": [
    {
      "source_line": 2,
      "target_line": 1,
      "symbol": "b",
      "dependency_type": "VariableUse",
      "context": "variable_use"
    },
    {
      "source_line": 2,
      "target_line": 1,
      "symbol": "b",
      "dependency_type": "VariableUse",
      "context": "arguments"
    }
  ],
  "usage": [
    {
      "name": "a",
      "kind": "Identifier",
      "scope": "a",
      "start_line": 1,
      "start_column": 10,
      "end_line": 1,
      "end_column": 11
    },
    {
      "name": "b",
      "kind": "Identifier",
      "scope": "a",
      "start_line": 1,
      "start_column": 12,
      "end_line": 1,
      "end_column": 13
    },
    {
      "name": "console.log(b)",
      "kind": "CallExpression",
      "scope": "a",
      "start_line": 2,
      "start_column": 3,
      "end_line": 2,
      "end_column": 17
    },
    {
      "name": "console",
      "kind": "Identifier",
      "scope": "a",
      "start_line": 2,
      "start_column": 3,
      "end_line": 2,
      "end_column": 10
    },
    {
      "name": "log",
      "kind": "FieldExpression",
      "scope": "a",
      "start_line": 2,
      "start_column": 11,
      "end_line": 2,
      "end_column": 14
    },
    {
      "name": "b",
      "kind": "Identifier",
      "scope": "a",
      "start_line": 2,
      "start_column": 15,
      "end_line": 2,
      "end_column": 16
    }
  ],
  "analysis_metadata": {
    "language": "TypeScript",
    "total_lines": 3,
    "analysis_timestamp": "now",
    "lintric_version": "0.1.0"
  }
}
