core/tests/typescript/snapshots/integration_tests__typescript__typescript_basic_ir.snap
---
source: core/tests/typescript/mod.rs
expression: "serde_json::to_string_pretty(&ir).unwrap()"
---
{
  "file_path": "tests/typescript/fixtures/basic_typescript_code.ts",
  "definitions": [
    {
      "name": "x",
      "line_number": 1,
      "definition_type": "VariableDefinition",
      "scope": null
    },
    {
      "name": "y",
      "line_number": 2,
      "definition_type": "VariableDefinition",
      "scope": null
    },
    {
      "name": "foo",
      "line_number": 3,
      "definition_type": "FunctionDefinition",
      "scope": "foo"
    }
  ],
  "dependencies": [
    {
      "source_line": 2,
      "target_line": 1,
      "symbol": "x",
      "dependency_type": "VariableUse",
      "context": "binary_expression"
    },
    {
      "source_line": 4,
      "target_line": 2,
      "symbol": "y",
      "dependency_type": "VariableUse",
      "context": "return_statement"
    }
  ],
  "analysis_metadata": {
    "language": "TypeScript",
    "total_lines": 5,
    "analysis_timestamp": "now",
    "lintric_version": "0.1.0"
  }
}
