core/tests/typescript/snapshots/integration_tests__typescript__typescript_basic_metrics.snap
---
source: core/tests/typescript/mod.rs
expression: "serde_json::to_string_pretty(&result).unwrap()"
---
{
  "file_path": "tests/typescript/fixtures/basic_typescript_code.ts",
  "line_metrics": [
    {
      "line_number": 2,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.2,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    },
    {
      "line_number": 4,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.4,
      "depth": 2,
      "transitive_dependencies": 2,
      "dependent_lines": [
        2
      ]
    }
  ],
  "overall_complexity_score": 5.66
}
